--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 *.o
-xmake.lua
-apache
-analog
+./xmake.lua
+./apache
+./analog
 /.xmake
 /build
 /.vscode
-*.png
-*.dot
-*.log
-*.txt
-*.svg
+./*.png
+./*.dot
+./*.log
+./*.txt
+./*.svg
